--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "sh -c 'contentlayer2 dev & next dev --turbo'",
     "content:dev": "contentlayer2 dev",
     "build": "next build",
     "start": "next start",
@@ -19,6 +19,7 @@
     "@ai-sdk/groq": "^1.2.8",
     "@ai-sdk/openai": "^1.3.16",
     "@ai-sdk/react": "^1.2.9",
+    "@emotion/is-prop-valid": "^1.0.7",
     "@giscus/react": "^2.4.0",
     "@langchain/community": "^0.3.45",
     "@langchain/core": "^0.3.45",
@@ -47,6 +48,7 @@
     "install": "^0.13.0",
     "langchain": "^0.3.23",
     "lucide-react": "^0.477.0",
+    "mdx-bundler": "^10.1.1",
     "next": "15.1.6",
     "next-contentlayer2": "^0.5.8",
     "next-themes": "^0.2.1",
